--- a/UX/WWM-FE/css/main.css
+++ b/UX/WWM-FE/css/main.css
@@ -48,3 +48,12 @@
     font-weight: bold;
 
 }
+
+#earth_div {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute !important;
+}   
+   
