About page+ some css improvements

--- a/UX/WWM-FE/css/main.css
+++ b/UX/WWM-FE/css/main.css
@@ -70,6 +70,10 @@ body {
     width: 100%;
 }
 
+#regions_div {
+    background-color: lightgray;
+}
+
 .jumbo {
     padding:20px;
     border-radius:7px;
