--- a/UX/WWM-FE/css/main.css
+++ b/UX/WWM-FE/css/main.css
@@ -7,7 +7,7 @@ html{
 
 body { 
     padding: 70px; 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI' !important
 }
    
 
@@ -71,21 +71,61 @@ body {
 }
 
 #regions_div {
-    background-color: lightgray;
+    background-color: #E0EDEC;
 }
 
 .jumbo {
+    background-color: #E0EDEC;
     padding:20px;
     border-radius:7px;
 }
 
 .risk-feed {
-    padding: 10px;
-    background-color: darkred;
+    padding: 20px;
+    background-color: #E0EDEC;
     border-radius: 7px;
 }
 
 .risk-feed-title{
-    color: white;
+    color: black;
     margin-bottom:20px;
+}
+
+.panel-header {
+    background-color:#E0EDEC 
+
+}
+
+
+
+
+/* navbar */
+.navbar-default {
+    background-color: #E0EDEC;
+    border-color: #E7E7E7;
+}
+/* Title */
+.navbar-default .navbar-brand {
+    color: #999;
+}
+
+/* Link */
+.navbar-default .navbar-nav > li > a {
+    color: #999;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+    color: #333;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #E7E7E7;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+    color: #555;
+    background-color: #D5D5D5;
 }
